tests/ui/traits/normalize/normalize-param-env-missing-implied-bound-2.next.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/normalize-param-env-missing-implied-bound-2.rs:36:1
   |
LL | fn hrtb<T: for<'a> Trait<&'a ()>>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0478`.
